--- a/lugang/res/layout/activity_express_detail.xml
+++ b/lugang/res/layout/activity_express_detail.xml
@@ -28,6 +28,7 @@
         android:src="@drawable/between"/>
         <TextView android:text="北海市"
             android:id="@+id/tocity"
+            android:layout_width="120dp"
             android:textSize="15sp"
             android:textColor="@android:color/holo_blue_dark"/>
         
