--- a/lugang/res/layout/header.xml
+++ b/lugang/res/layout/header.xml
@@ -8,6 +8,8 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="1dp"
+        android:minWidth="1dp"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="5dp"
@@ -22,5 +24,16 @@
         android:textSize="20sp"
         android:text=""/>
 
+    <Button
+        android:id="@+id/confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_margin="5dp"
+        android:visibility="gone"
+        android:text="" />
 
 </RelativeLayout>
