--- a/lugang/res/values/styles.xml
+++ b/lugang/res/values/styles.xml
@@ -5,7 +5,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Holo">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -39,6 +39,21 @@
         <item name="android:layout_width">80dp</item>
         <item name="android:gravity">right</item>
         <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
+    <style name="order">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">70dp</item>
+        <item name="android:gravity">right</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
+    <style name="EditStyle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">150dp</item>
+        <item name="android:maxHeight">40dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginLeft">10dp</item>
     </style>
     
     <!-- line style -->
