--- a/lugang/res/layout/calc_cubage.xml
+++ b/lugang/res/layout/calc_cubage.xml
@@ -11,34 +11,61 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="每件" />
+            android:layout_marginLeft="5dp"
+            android:text="(" />
 
         <EditText
-            android:id="@+id/let01"
-            android:layout_width="80dp"
+            android:id="@+id/length"
+            android:layout_width="50dp"
             style="@style/EditStyle"
+            android:layout_marginLeft="1dp"
+            android:hint="长"
             android:inputType="number" >
-
-            <requestFocus />
+                 <requestFocus />
         </EditText>
-
         <TextView
-            android:id="@+id/unit01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="t" />
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/width"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="宽"
+            android:inputType="number" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/height"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="高"
+            android:inputType="number" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:textSize="25sp"
             android:text="×" />
 
         <EditText
-            android:id="@+id/let02"
-            android:layout_width="80dp"
+            android:id="@+id/count"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
             style="@style/EditStyle"
             android:inputType="number" />
 
@@ -48,16 +75,12 @@
             android:text="件=" />
 
         <TextView
-            android:id="@+id/line_result"
+            android:id="@+id/result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/m3"
             android:text="0" />
 
-        <TextView
-            android:id="@+id/unit02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="t" />
 
     </LinearLayout>
     <LinearLayout
@@ -69,34 +92,61 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="每件" />
+            android:layout_marginLeft="5dp"
+            android:text="(" />
 
         <EditText
-            android:id="@+id/let11"
-            android:layout_width="80dp"
+            android:id="@+id/length1"
+            android:layout_width="50dp"
             style="@style/EditStyle"
+            android:layout_marginLeft="1dp"
+            android:hint="长"
             android:inputType="number" >
-
-            <requestFocus />
+                 <requestFocus />
         </EditText>
-
         <TextView
-            android:id="@+id/unit11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="t" />
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/width1"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="宽"
+            android:inputType="number" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/height1"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="高"
+            android:inputType="number" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:textSize="25sp"
             android:text="×" />
 
         <EditText
-            android:id="@+id/let12"
-            android:layout_width="80dp"
+            android:id="@+id/count1"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
             style="@style/EditStyle"
             android:inputType="number" />
 
@@ -106,16 +156,11 @@
             android:text="件=" />
 
         <TextView
-            android:id="@+id/line1_result"
+            android:id="@+id/result1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/m3"
             android:text="0" />
-
-        <TextView
-            android:id="@+id/unit12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="t" />
 
     </LinearLayout>
     <LinearLayout
@@ -127,34 +172,61 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="每件" />
+            android:layout_marginLeft="5dp"
+            android:text="(" />
 
         <EditText
-            android:id="@+id/let21"
-            android:layout_width="80dp"
+            android:id="@+id/length2"
+            android:layout_width="50dp"
             style="@style/EditStyle"
+            android:layout_marginLeft="1dp"
+            android:hint="长"
             android:inputType="number" >
-
-            <requestFocus />
+                 <requestFocus />
         </EditText>
-
         <TextView
-            android:id="@+id/unit21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="t" />
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/width2"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="宽"
+            android:inputType="number" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/height2"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="高"
+            android:inputType="number" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:textSize="25sp"
             android:text="×" />
 
         <EditText
-            android:id="@+id/let22"
-            android:layout_width="80dp"
+            android:id="@+id/count2"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
             style="@style/EditStyle"
             android:inputType="number" />
 
@@ -164,16 +236,11 @@
             android:text="件=" />
 
         <TextView
-            android:id="@+id/line2_result"
+            android:id="@+id/result2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/m3"
             android:text="0" />
-
-        <TextView
-            android:id="@+id/unit22"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="t" />
 
     </LinearLayout>
     <LinearLayout
@@ -185,34 +252,61 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="每件" />
+            android:layout_marginLeft="5dp"
+            android:text="(" />
 
         <EditText
-            android:id="@+id/let31"
-            android:layout_width="80dp"
+            android:id="@+id/length3"
+            android:layout_width="50dp"
             style="@style/EditStyle"
+            android:layout_marginLeft="1dp"
+            android:hint="长"
             android:inputType="number" >
-
-            <requestFocus />
+                 <requestFocus />
         </EditText>
-
         <TextView
-            android:id="@+id/unit31"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="t" />
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/width3"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="宽"
+            android:inputType="number" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/height3"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="高"
+            android:inputType="number" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:textSize="25sp"
             android:text="×" />
 
         <EditText
-            android:id="@+id/let32"
-            android:layout_width="80dp"
+            android:id="@+id/count3"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
             style="@style/EditStyle"
             android:inputType="number" />
 
@@ -222,16 +316,11 @@
             android:text="件=" />
 
         <TextView
-            android:id="@+id/line3_result"
+            android:id="@+id/result3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/m3"
             android:text="0" />
-
-        <TextView
-            android:id="@+id/unit32"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="t" />
 
     </LinearLayout>
     <LinearLayout
@@ -243,34 +332,61 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="每件" />
+            android:layout_marginLeft="5dp"
+            android:text="(" />
 
         <EditText
-            android:id="@+id/let41"
-            android:layout_width="80dp"
+            android:id="@+id/length4"
+            android:layout_width="50dp"
             style="@style/EditStyle"
+            android:layout_marginLeft="1dp"
+            android:hint="长"
             android:inputType="number" >
-
-            <requestFocus />
+                 <requestFocus />
         </EditText>
-
         <TextView
-            android:id="@+id/unit41"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="t" />
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/width4"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="宽"
+            android:inputType="number" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/height4"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="高"
+            android:inputType="number" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:textSize="25sp"
             android:text="×" />
 
         <EditText
-            android:id="@+id/let42"
-            android:layout_width="80dp"
+            android:id="@+id/count4"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
             style="@style/EditStyle"
             android:inputType="number" />
 
@@ -280,16 +396,11 @@
             android:text="件=" />
 
         <TextView
-            android:id="@+id/line4_result"
+            android:id="@+id/result4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/m3"
             android:text="0" />
-
-        <TextView
-            android:id="@+id/unit42"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="t" />
 
     </LinearLayout>
     <LinearLayout
@@ -301,34 +412,61 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="每件" />
+            android:layout_marginLeft="5dp"
+            android:text="(" />
 
         <EditText
-            android:id="@+id/let51"
-            android:layout_width="80dp"
+            android:id="@+id/length5"
+            android:layout_width="50dp"
             style="@style/EditStyle"
+            android:layout_marginLeft="1dp"
+            android:hint="长"
             android:inputType="number" >
-
-            <requestFocus />
+                 <requestFocus />
         </EditText>
-
         <TextView
-            android:id="@+id/unit51"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="t" />
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/width5"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="宽"
+            android:inputType="number" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="×" />
+        <EditText
+            android:id="@+id/height5"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
+            style="@style/EditStyle"
+            android:hint="高"
+            android:inputType="number" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=")" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:textSize="25sp"
             android:text="×" />
 
         <EditText
-            android:id="@+id/let52"
-            android:layout_width="80dp"
+            android:id="@+id/count5"
+            android:layout_width="50dp"
+            android:layout_marginLeft="1dp"
             style="@style/EditStyle"
             android:inputType="number" />
 
@@ -338,16 +476,11 @@
             android:text="件=" />
 
         <TextView
-            android:id="@+id/line5_result"
+            android:id="@+id/result5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/m3"
             android:text="0" />
-
-        <TextView
-            android:id="@+id/unit52"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="t" />
 
     </LinearLayout>
 
@@ -358,14 +491,13 @@
         android:gravity="right" >
 
         <TextView
-            android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="额外加" />
 
         <EditText
             android:id="@+id/extra"
-            android:layout_width="80dp"
+            android:layout_width="50dp"
             style="@style/EditStyle"
             android:inputType="number" />
 
@@ -379,7 +511,8 @@
             android:id="@+id/unit_extra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="t" />
+            android:background="@drawable/m3"
+            android:text="" />
 
     </LinearLayout>
 
