--- a/lugang/res/values/styles.xml
+++ b/lugang/res/values/styles.xml
@@ -49,9 +49,11 @@
     <style name="EditStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">150dp</item>
-        <item name="android:maxHeight">40dp</item>
+        <item name="android:minHeight">1dp</item>
+        <item name="android:maxHeight">20dp</item>
         <item name="android:paddingTop">2dp</item>
         <item name="android:paddingBottom">2dp</item>
+        <item name="android:background">@drawable/login_edittext_bg</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_marginLeft">10dp</item>
     </style>
