--- a/lugang/res/layout/activity_login.xml
+++ b/lugang/res/layout/activity_login.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?> 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="@drawable/splash" >
 
+    <RelativeLayout 
+        android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ScrollView
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/login" >
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:background="@drawable/splash"
         android:orientation="vertical">
     
     
@@ -16,7 +23,6 @@
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:singleLine="true"
@@ -39,18 +45,21 @@
         android:inputType="textPassword"
         android:hint="@string/password"/>
     
+    </LinearLayout>
+    </ScrollView>
+    
     <Button
         android:id="@+id/login"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
+        android:layout_marginTop="100dp"
         android:background="@drawable/login_button_bg"
         android:textSize="18sp"
         android:textColor="@android:color/white"
-        android:layout_marginTop="30dp"
+        android:layout_alignParentBottom="true"
         android:onClick="onLogin"
         android:text="@string/login" />
-    </LinearLayout>
-
-</ScrollView>
+</RelativeLayout>
+</LinearLayout>
