--- a/lugang/res/layout/header.xml
+++ b/lugang/res/layout/header.xml
@@ -25,7 +25,7 @@
         android:text=""/>
 
     <Button
-        android:id="@+id/confirm"
+        android:id="@+id/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
