--- a/lugang/res/layout/tab3.xml
+++ b/lugang/res/layout/tab3.xml
@@ -17,6 +17,7 @@
         	android:text="@string/singlein"/>
     
     	<Button style="@style/tabone"
+    	    android:id="@+id/in"
         	android:text="@string/multin"/>
     </LinearLayout>
     
