--- a/lugang/res/layout/assign_header.xml
+++ b/lugang/res/layout/assign_header.xml
@@ -16,6 +16,6 @@
     
     <TextView style="@style/header"
         android:layout_weight="1"
-        android:text="总重量"/>
+        android:text="数量"/>
 
 </LinearLayout>
