--- a/lugang/res/layout/office_header.xml
+++ b/lugang/res/layout/office_header.xml
@@ -30,7 +30,8 @@
         android:layout_height="match_parent"
         android:background="@android:color/darker_gray"/>
     
-    <TextView android:layout_width="0dp"
+    <TextView android:id="@+id/time"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center"
