--- a/lugang/res/layout/tab4.xml
+++ b/lugang/res/layout/tab4.xml
@@ -22,6 +22,7 @@
         android:text="@string/singleout"/>
     
     	<Button style="@style/tabone"
+    	    android:id="@+id/out"
         android:text="@string/multiout"/>
     </LinearLayout>
 
