--- a/lugang/res/values/styles.xml
+++ b/lugang/res/values/styles.xml
@@ -24,6 +24,18 @@
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_weight">1</item>
   </style>
+  
+    <!-- dialog theme -->
+    <style name="dialog" parent="@android:style/Theme.Dialog">
+         <item name="android:windowFrame">@null</item><!--边框-->
+        <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
+        <item name="android:windowIsTranslucent">true</item><!--半透明-->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@android:color/background_dark</item>
+        <item name="android:backgroundDimEnabled">true</item><!--模糊-->
+        <item name="android:windowAnimationStyle">@+android:style/Animation.Translucent</item>
+    </style>
     
     <!-- Header style -->
     <style name="header">
