空白运单入库

--- a/lugang/res/layout/tab1.xml
+++ b/lugang/res/layout/tab1.xml
@@ -30,6 +30,10 @@
     </LinearLayout>
     
     <Button style="@style/tabone"
+        android:id="@+id/qrsearch"
+        android:text="@string/qrsearch"/>
+    
+    <Button style="@style/tabone"
         android:id="@+id/express"
         android:text="@string/express"/>
     
