--- a/lugang/res/layout/activity_blank.xml
+++ b/lugang/res/layout/activity_blank.xml
@@ -40,29 +40,55 @@
 
                 <TextView
                     style="@style/detail"
+                    android:layout_gravity="right|center_vertical"
                     android:text="是否投保" />
 
-                <Switch
-                    android:id="@+id/istb"
-                    android:layout_width="100dp"
+                <RadioGroup
                     android:layout_columnSpan="3"
                     android:layout_marginLeft="10dp"
-                    android:textOff="@string/no"
-                    android:textOn="@string/yes" />
+                    android:gravity="left"
+                    android:orientation="horizontal" >
+                    <RadioButton android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/istb_yes"
+                        android:gravity="left|center"
+                        android:text="@string/yes"/>
+                    
+                    <RadioButton android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/istb_no"
+                        android:layout_marginLeft="20dp"
+                        android:gravity="left|center"
+                        android:checked="true"
+                        android:text="@string/no"/>
+                 </RadioGroup>
 
                 <View style="@style/line" />
 
                 <TextView
                     style="@style/detail"
+                    android:layout_gravity="right|center_vertical"
                     android:text="是否提醒" />
 
-                <Switch
-                    android:id="@+id/istx"
-                    android:layout_width="100dp"
+                <RadioGroup
                     android:layout_columnSpan="3"
                     android:layout_marginLeft="10dp"
-                    android:textOff="@string/no"
-                    android:textOn="@string/yes" />
+                    android:gravity="left"
+                    android:orientation="horizontal" >
+                    <RadioButton android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/istx_yes"
+                        android:gravity="left|center"
+                        android:text="@string/yes"/>
+                    
+                    <RadioButton android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/istx_no"
+                        android:layout_marginLeft="20dp"
+                        android:gravity="left|center"
+                        android:checked="true"
+                        android:text="@string/no"/>
+                 </RadioGroup>
 
                 <View style="@style/line" />
 
@@ -79,7 +105,7 @@
                     <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/sh"
-                        android:gravity="left"
+                        android:gravity="left|center"
                         android:checked="true"
                         android:text="送货"/>
                     
@@ -87,7 +113,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/zt"
                         android:layout_marginLeft="20dp"
-                        android:gravity="left"
+                        android:gravity="left|center"
                         android:text="自提"/>
                  </RadioGroup>
 
@@ -148,6 +174,7 @@
                 <Button
                     android:id="@+id/to"
                     style="@style/EditStyle"
+                    android:layout_width="200dp"
                     android:layout_columnSpan="3"
                     android:textColor="@android:color/darker_gray"
                     android:text="请选择区域" />
@@ -223,6 +250,7 @@
                 <Button
                     android:id="@+id/from"
                     style="@style/EditStyle"
+                    android:layout_width="200dp"
                     android:layout_columnSpan="3"
                     android:textColor="@android:color/darker_gray"
                     android:text="请选择区域" />
