--- a/lugang/res/layout/activity_express_detail.xml
+++ b/lugang/res/layout/activity_express_detail.xml
@@ -17,7 +17,7 @@
         
         <TextView style="@style/detail"
             android:text="路线"/>
-        <TextView android:text="柳州市"
+        <TextView android:text=""
             android:id="@+id/fromcity"
             android:textSize="15sp"
             android:layout_marginLeft="10dp"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:src="@drawable/between"/>
-        <TextView android:text="北海市"
+        <TextView android:text=""
             android:id="@+id/tocity"
             android:layout_width="120dp"
             android:textSize="15sp"
@@ -40,13 +40,13 @@
             android:id="@+id/fromaddress"
             android:layout_width="200dp"
             android:layout_marginLeft="10dp"
-            android:text="广西壮族自治区柳州市鱼峰区弯塘路东三巷110号A座119室"/>
+            android:text=""/>
         
         <View style="@style/line"/>
         
         <TextView style="@style/detail"
             android:text="途经城市"/>
-        <TextView android:text="南宁市,钦州市"
+        <TextView android:text=""
             android:id="@+id/crosscity"
             android:layout_width="200dp"
             android:singleLine="true"
@@ -62,7 +62,7 @@
             android:id="@+id/toaddress"
             android:layout_width="200dp"
             android:layout_marginLeft="10dp"
-            android:text="广西壮族自治区柳州市鱼峰区弯塘路东三巷110号A座119室"/>
+            android:text=""/>
         <View style="@style/line"/>
         
         <TextView style="@style/detail"
@@ -70,7 +70,7 @@
         <TextView android:layout_columnSpan="3"
             android:id="@+id/garden"
             android:layout_marginLeft="10dp"
-            android:text="新概念物流园"/>
+            android:text=""/>
         <View style="@style/line"/>
         
         <TextView style="@style/detail"
@@ -78,7 +78,7 @@
         <TextView android:layout_columnSpan="2"
             android:id="@+id/tel"
             android:layout_marginLeft="10dp"
-            android:text="0772-1010110"/>
+            android:text=""/>
         <Button android:id="@+id/dial"
             android:layout_height="30dp"
             android:paddingLeft="5dp"
@@ -95,7 +95,7 @@
         <TextView android:layout_columnSpan="3"
             android:layout_marginLeft="10dp"
             android:id="@+id/minprice"
-            android:text="12元"/>
+            android:text=""/>
         <View style="@style/line"/>
         
         <TextView style="@style/detail"
@@ -103,7 +103,7 @@
         <TextView android:layout_columnSpan="3"
             android:layout_marginLeft="10dp"
             android:id="@+id/lightprice"
-            android:text="24元/m³"/>
+            android:text=""/>
         <View style="@style/line"/>
         
         <TextView style="@style/detail"
@@ -111,7 +111,7 @@
         <TextView android:layout_columnSpan="3"
             android:layout_marginLeft="10dp"
             android:id="@+id/haevyprice"
-            android:text="12元/公斤"/>
+            android:text=""/>
         <View style="@style/line"/>
         
         <TextView style="@style/detail"
