--- a/lugang/res/layout/dialog_truck.xml
+++ b/lugang/res/layout/dialog_truck.xml
@@ -26,7 +26,7 @@
 <View android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#33B5E5"/>
-<ListView android:id="@+id/list_express"
+<ListView android:id="@+id/list_truck"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:divider="@android:color/transparent">
