--- a/lugang/res/layout/order_item.xml
+++ b/lugang/res/layout/order_item.xml
@@ -16,7 +16,7 @@
             android:layout_columnSpan="2"
             android:layout_marginLeft="10dp"/>
         
-        <Button 
+        <TextView 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="1dp"
@@ -25,8 +25,6 @@
                     android:layout_columnSpan="4"
                     android:layout_marginRight="20dp"
                     android:drawableRight="@drawable/yc_right"
-                    android:background="@android:color/transparent"
-                    android:focusable="false"
                     android:textSize="13sp"
                     android:text="查看"/>
         
